--- a/CIFAR10_Car_Truck_Classification.ipynb
+++ b/CIFAR10_Car_Truck_Classification.ipynb
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The objective is to classify between a car or truck give an image of a car or truck. In this project, I used principal components to computationally enable using LDA, Random Forest, and Gradient Boosted models. Afterwards, I compared the results to a CNN model with multiple layers."
+    "The objective is to classify between a car or truck give an image of a car or truck. In this project, I used principal components along with a Linear Discrimnant Analysis model. Afterwards, I used a Random Forest and Gradient Boosted, both tree based models. Afterwards, I compared the results to a CNN model with multiple layers."
    ]
   },
   {
